# udemy_course

./: Makefile  pyproject.toml  setup.cfg
.github/actions/build-application/: action.yml
.github/workflows/: lint.yml  workflow.yml
Inference_service/: pyproject.toml  run.py
Inference_service/app/api/: prediction.py
Inference_service/config/: .env  __init__.py
Inference_service/schema/: apartments.py
Inference_service/services/: model_inference.py
project/src/: runner_builder.py  runner_inference.py
project/src/config/: .env
project/src/model/: model_builder.py  model_inference.py
src/config/: .env  __init__.py  model.py
src/model/: model_service.py
src/model/pipeline/: model.py
